push 1, no projects

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
-<head>
-<title>Dilute's Magnum Opus</title>
-<meta name="description" content="Our first page">
-<meta name="keywords" content="html tutorial template">
-</head>
-<body>
-Content goes here.
-</body>
+    <head>
+        <title>Dilute's Magnum Opus</title>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <header>
+            Dilute's Magnus Opus [Portfolio]
+        </header>
+    </body>
 </html>
